--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-19
 manifestmerger.enabled=true
-android.library.reference.1=../../bhulok/bl_android_sdk/BhulokDeveloperSDK
+android.library.reference.1=../../../../tools/android/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.2=../../bhulok/bl_android_sdk/BhulokDeveloperSDK
